fixed the extra space on the right side and work title

--- a/src/App.css
+++ b/src/App.css
@@ -315,7 +315,7 @@ nav a:hover {
 .stack-names {
   border-radius: 0;
   height: 100%;
-  width: 80%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -325,7 +325,6 @@ nav a:hover {
   display: flex;
   justify-content: center;
   font-size: 1.6rem;
-  margin: 0 0 0 15px;
 }
 
 /* #endregion */
@@ -365,7 +364,7 @@ nav a:hover {
   min-height: 500px;
   background: #f0f0f010;
   margin: 25px 0 0 0;
-  padding: 35px;
+  padding: 25px;
   border-radius: 15px;
 }
 
@@ -373,6 +372,7 @@ nav a:hover {
   font-size: 2rem;
   font-weight: 75;
   text-decoration: underline;
+  width: 98%;
 }
 
 .each-work h6 {
@@ -387,7 +387,7 @@ nav a:hover {
 }
 
 .fa-link-icon {
-  margin: 0 0 0 15px;
+  margin: 0 15px 0 0;
 }
 
 .each-work img {
@@ -422,6 +422,22 @@ nav a:hover {
   background: #000000a6;
 }
 /* #endregion */
+
+@media screen and (min-width: 374px) {
+  .about-me li {
+    margin: 0 0 0 15px;
+  }
+}
+
+@media screen and (min-width: 425px) {
+  .stack-names {
+    width: 80%;
+  }
+
+  .each-work {
+    padding: 40px;
+  }
+}
 
 @media screen and (min-width: 1023px) {
   body {
@@ -485,9 +501,7 @@ nav a:hover {
   .fontAweIcon {
     font-size: 5.2rem;
   }
-}
 
-@media screen and (min-width: 1439px) {
   .about-me {
     flex-direction: row;
   }
